# bittty-forensics

./: .gitignore  CLAUDE.md  Makefile  README.md  README.pt-BR.md  README_orig.md  pyproject.toml
.github/workflows/: unit-tests.yml
demo/: Provedor_Modelo.md  forensicsterminal.py  processador_forense.py  terminal.py
demo/interface/: config.template.yaml  proxy_llm.py
docs/: DEC_private.md  architecture.md
scripts/: compare-versions.sh  coverage.sh  perf.sh
src/bittty/: __init__.py  buffer.py  charsets.py  constants.py  style.py  tcaps.py  terminal.py
src/bittty/parser/: __init__.py  core.py  csi.py  dcs.py  escape.py  osc.py
src/bittty/pty/: __init__.py  base.py  unix.py  windows.py
tests/integration/: conftest.py  test_demo_integration.py
tests/misc/: test-vim.sh
tests/performance/: benchmark_parser.py
tests/unit/: conftest.py  test_buffer.py  test_demo_mouse.py  test_input_modes.py  test_pty.py  test_style_diff.py  test_tcaps.py  test_windows_env.py
tests/unit/parser/: conftest.py  test_alternate_buffer.py  test_c0_controls.py  test_charset_switching.py  test_core.py  test_csi_sequences.py  test_dec_special_graphics.py  test_decarm.py  test_decbkm.py  test_decnkm.py  test_decnlm.py  test_decsclm.py  test_device_queries.py  test_error_handling.py  test_escape_sequences.py  test_keypad_and_device.py  test_osc_sequences.py  test_parse_utf8.py  test_parser_helpers.py  test_parser_state_and_modes.py  test_printable_chars.py  test_repeat_sequence.py  test_sgr_sequences.py  test_srm.py  test_utf8.py
tests/unit/pty/: test_unix.py  test_windows.py
(+9 files in other folders)
